# realtime-ai-dev

./: .env-sample  .gitignore  LICENSE  README.md  app.py  llm_benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-huggingface.yml
data/: leaderboard_北京_2025-06-29.json
test/: requirements.txt  silicon_flow.py
